# dbus_communication_example

./: README.md
dbus_dispatcher/: CMakeLists.txt  README.md
dbus_dispatcher/app/: CMakeLists.txt  app_dbus_client.cpp  app_dbus_client_listener.cpp  app_dbus_server.cpp  app_dbus_server_daemon.cpp
dbus_dispatcher/include/dbus_dispatcher/: dbus_client.h  dbus_server.h
dbus_dispatcher/other/: README.md  org.sdbuscpp.messageDispatcher.conf  org.sdbuscpp.messageDispatcher1.xml
dbus_dispatcher/src/: dbus_client.cpp  dbus_server.cpp
